<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. Coding By Emad Pourahmadi
  ~ Contact me : 09354912598.
  ~ Email  : emad_pa_69@yahoo.com
  ~ WebSite : www.emadpourahmadi.ir
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:layoutDirection="rtl"
    tools:targetApi="jelly_bean_mr1">

    <TextView
        android:id="@+id/textView7"
        fontPath="fonts/sansbold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/margin"
        android:text="@string/force_close"
        android:textColor="@color/force_close"
        android:textSize="@dimen/title1"
        android:textStyle="bold"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/force_close_back"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:gravity="center"
        android:text="@string/force_close_msg"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/force_close_msg"
        android:textSize="@dimen/title2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"

        android:src="@drawable/error" />

    <Button
        android:id="@+id/force_close_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/marginBigLR"
        android:layout_marginTop="@dimen/marginLR"
        android:layout_marginRight="@dimen/marginBigLR"
        android:layout_marginBottom="@dimen/marginLR"
        android:background="@color/bg_red_error"
        android:gravity="center"
        android:text="@string/back"

        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />
</RelativeLayout>