<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layoutDirection="ltr">

    <View
        android:id="@+id/view5"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/inThis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view5"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/editDetail"
        android:textAppearance="@style/TextAppearance.Bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/inThis"
        android:layout_marginTop="8dp"
        android:background="@color/divider_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inThis" />

    <ImageView
        android:id="@+id/imgDeleted"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:src="@drawable/ic_delete_forever"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:paddingEnd="8dp"
        android:text="@string/editProfile"
        android:textAppearance="@style/TextAppearance.Bold"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.wang.avi.AVLoadingIndicatorView
        style="@style/AVLoadingIndicatorLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:indicatorColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cancel"
        android:textColor="@color/normalGray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view9"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@color/highlightGray"
        app:layout_constraintBottom_toTopOf="@+id/btnConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="center"
        android:src="@drawable/ic_profile_message"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/layoutedtReminderTitle"
        app:layout_constraintEnd_toEndOf="@+id/txtDate"
        app:layout_constraintStart_toEndOf="@+id/layoutedtReminderTitle"
        app:layout_constraintTop_toTopOf="@+id/layoutedtReminderTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutedtReminderTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/reminderTitle"
        android:theme="@style/ShopEditTextTheme"
        app:hintTextColor="@color/title1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtReminderTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/title2" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_height="@dimen/editTextSize"
        android:layout_gravity="center"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_spinner_login"
        android:drawableEnd="@drawable/ic_date"
        android:drawablePadding="18dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:gravity="right|center"
        android:hint="@string/plsSelectDate"
        android:paddingLeft="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingRight="@dimen/paddingSmall"
        android:paddingBottom="@dimen/padding"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/title1"
        android:textSize="@dimen/titleSmall"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutedtReminderTitle"
        tools:ignore="RtlCompat"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="0dp"
        android:layout_height="@dimen/editTextSize"
        android:layout_gravity="center"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_spinner_login"
        android:drawableEnd="@drawable/ic_time"
        android:drawablePadding="18dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:gravity="right|center"
        android:hint="@string/plsSelectTime"
        android:paddingLeft="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingRight="@dimen/paddingSmall"
        android:paddingBottom="@dimen/padding"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/title1"
        android:textSize="@dimen/titleSmall"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate"
        tools:ignore="RtlCompat"
        tools:targetApi="jelly_bean_mr1" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/view9"
        app:layout_constraintEnd_toEndOf="@+id/txtTime"
        app:layout_constraintStart_toStartOf="@+id/txtTime"
        app:layout_constraintTop_toBottomOf="@id/txtTime">

        <RadioButton
            android:id="@+id/rbOnce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="یکبار" />

        <RadioButton
            android:id="@+id/rbWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="هر روز" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>